commit from stasaki

--- a/README.html
+++ b/README.html
@@ -239,7 +239,7 @@ wget https://huggingface.co/stasaking/pentamind/resolve/main/models/vgg19_bn-10_
 </div>
 <div id="acknowledgments" class="section level2">
 <h2>Acknowledgments</h2>
-<p>We would like to express our sincere thanks to all the participants who took part in ROS, MAP, MARS studies. Your contributions have been invaluable to our research, and we could not have achieved our results without your participation.</p>
+<p>We would like to express our sincere thanks to all the participants who took part in ROS, MAP, and MARS studies. Your contributions have been invaluable to our research, and we could not have achieved our results without your participation.</p>
 <p>We would also like to thank the machine learning community for providing easy access to pre-trained models. The availability of high-quality models has enabled us to build on previous work and make progress on our research goals.</p>
 <p>Once again, thank you to all the individuals and organizations who have contributed to this project. Your efforts are greatly appreciated and have made a real difference in our work.</p>
 </div>
