commit from stasaki

--- a/README.html
+++ b/README.html
@@ -166,7 +166,7 @@ pre code {
 
 <div id="pentamind" class="section level1">
 <h1>PentaMind</h1>
-<p>This repository contains a deep learning model for predicting cognitive performance from an image of intersecting pentagons. The model is trained on data collected at Rush Alzheimer’s Disease Center and is implemented using PyTorch.</p>
+<p>This repository contains a deep learning model for predicting cognitive performance from an image of intersecting pentagons. The model is trained on data collected at Rush Alzheimer’s Disease Center (RADC) and is implemented using PyTorch.</p>
 <div id="getting-started" class="section level2">
 <h2>Getting Started</h2>
 <p>These instructions will get you a copy of the project up and running on your local machine for development and testing purposes.</p>
@@ -226,12 +226,6 @@ wget https://huggingface.co/stasaking/pentamind/resolve/main/models/vgg19_bn-10_
 <div id="dataset" class="section level2">
 <h2>Dataset</h2>
 <p>The actual intersecting pentaons images and associated labels used in this study can be requested at the <a href="https://www.radc.rush.edu/">RADC Resource Sharing Hub</a>.</p>
-</div>
-<div id="authors" class="section level2">
-<h2>Authors</h2>
-<ul>
-<li>Shinya Tasaki</li>
-</ul>
 </div>
 <div id="license" class="section level2">
 <h2>License</h2>
